# OpenNutriLab

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yaml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack-stats.json
.continue/prompts/: .conventional-commit-with-gitmoji-ai-prompt.yaml
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
compose/local/django/: Dockerfile
compose/local/node/: Dockerfile
config/: api_ninja.py  api_router.py  asgi.py  celery_app.py  urls.py
config/settings/: base.py  local.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
foods/: admin.py  api.py  apps.py  data_mapping.py  fields.py  forms.py  models.py  off_utils.py  schema.py  services.py  signals.py  units.py  urls.py  views.py  widgets.py
foods/fixtures/: macronutrients.json
foods/management/commands/: init_nutrients.py  load_nutrients.py
foods/migrations/: 0001_initial.py  0002_alter_food_barcode.py  0002_macronutrient.py  0003_alter_food_barcode.py  0003_alter_foodvitamin_options_foodmacronutrient.py  0004_alter_food_description.py  0004_vitamin_emojis.py  0005_food_image.py  0005_remove_vitamin_description_remove_vitamin_emojis_and_more.py  0006_alter_food_image.py  0006_macronutrient_unique_macronutrient_name_case_insensitive.py  0007_alter_foodvitamin_amount_and_more.py
foods/static/js/: food_form.js
foods/templatetags/: form_tags.py
foods/tests/: test_fields.py  test_forms.py  test_models.py  test_off.py  test_signals.py  test_views.py
foods/tests/data/: 3229820794556.json
locale/fr_FR/LC_MESSAGES/: django.mo  django.po
nuto/: asgi.py  settings.py  urls.py  wsgi.py
nutrilibre/: api.py  asgi.py  settings.py  urls.py
opennutria/: asgi.py  settings.py  urls.py  wsgi.py
opennutrilab/: api.py  conftest.py  settings.py  urls.py  wsgi.py
opennutrilab/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
opennutrilab/crispy_bootstrap_extended/: layouts.py
opennutrilab/static/css/: project.css
opennutrilab/static/js/: fetch_barcode.js  fouc_helper.js  plotly_loader.js  project.js  tabulator_loader.js  theme_switcher.js
opennutrilab/static/sass/: project.scss  tabulator.scss
opennutrilab/templates/: base.html
opennutrilab/templates/components/: dark_mode_switch.html  language_selector.html
opennutrilab/templates/crispy_bootstrap_extend/: accordion-group-extended-base.html  accordion-group-extended-vertical.html  accordion-group-extended.html
opennutrilab/templates/foods/: food_form.html  food_list.html
opennutrilab/templates/foods/components/: composition_field_group.html  image_preview.html
opennutrilab/templates/products/: product_form.html  product_list.html
opennutrilab/templates/products/components/: composition_field_group.html  graph_container.html  image_preview.html
opennutrilab/users/: adapters.py  apps.py  models.py  views.py
opennutrilab/users/api/: serializers.py  views.py
opennutrilab/users/migrations/: 0001_initial.py
opennutrilab/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
opennutrilab/users/tests/api/: test_urls.py  test_views.py
products/: admin.py  api.py  api_ninja.py  apps.py  base_schema.py  data_mapping.py  fields.py  forms.py  models.py  off_utils.py  schema.py  signals.py  units.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_add_macronutrients.py  0003_alter_macronutrient_options_macronutrient_parent.py  0004_link_submacronutrients_to_parent.py  0005_alter_macronutrient_options_and_more.py  0006_alter_macronutrient_labels_and_more.py  0007_alter_macronutrient_options.py  0008_macronutrient_name_in_form.py  0009_set_macronutrient_name_in_form.py  0010_ingredientref_ingredient.py  0011_ingredient_is_reference_exists.py  0012_rename_is_reference_exists_ingredient_has_reference.py  0013_ingredient_unique_ingredient_per_parent_and_more.py  0014_remove_ingredient_unique_ingredient_per_parent_and_more.py
products/openfoodfacts/: api_response_shema.py  schema.py  utils.py
products/static/js/: product_form.js
products/static/products/js/: product_form_ingredients_table.js  product_form_macronutrients_graph.js
products/tests/: test_api_ninja.py  test_fields.py  test_forms.py  test_models.py  test_off.py  test_signals.py  test_views.py
products/tests/data/: 3229820794556.json
static/js/: fetch_barcode.js
templates/foods/: food_form copy.html  food_form.html  food_form_legacy.html  food_list copy.html  food_list.html  form_snippet.html
templates/foods/components/: composition_field_group.html
typings/quantityfield/: __init__.pyi  fields.pyi  helper.pyi  settings.pyi  units.pyi  widgets.pyi
webpack/: common.config.js
