[project]
name = "nutrilibre"
version = "0.1.0"
description = "An open-source app for precise food and meal analysis"
authors = [{ name = "Andre Lanrezac", email = "a.lanrezac@gmail.com" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-browser-reload (>=1.18.0,<2.0.0)",
    "django-pint (>=0.7.3,<0.8.0)",
    "django-vanilla-views (>=3.0.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-ninja (>=1.4.3,<2.0.0)",
    "debugpy (>=1.8.14,<2.0.0)",
    "glom (>=24.11.0,<25.0.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-types = "^0.22.0"
coverage = "^7.10.3"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
django-stubs-ext = "^5.2.2"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nutrilibre.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]