[project]
name = "opennutrilab"
version = "0.1.0"
description = "An open-source app for precise food and meal analysis"
authors = [{ name = "Andre Lanrezac", email = "a.lanrezac@gmail.com" }]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "django-pint (>=0.7.3,<0.8.0)",
    "django-vanilla-views (>=3.0.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-ninja (>=1.4.3,<2.0.0)",
    "debugpy (>=1.8.14,<2.0.0)",
    "glom (>=24.11.0,<25.0.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)",
    "uvicorn>=0.35.0",
    "whitenoise>=6.9.0",
    "django-webpack-loader>=3.2.1",
    "django-cors-headers>=4.7.0",
    "django-allauth[mfa]>=65.11.1",
    "argon2-cffi>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "django-types>=0.22.0,<0.23",
    "coverage>=7.10.3,<8",
    "pytest>=8.4.1,<9",
    "pytest-django>=4.11.1,<5",
    "django-extensions>=4.1",
    "django-browser-reload>=1.18.0",
    "django-debug-toolbar>=6.0.0",
    "basedpyright>=1.31.3",
    "pytest-sugar>=1.1.0",
    "django-stubs-ext>=5.2.2",
    "watchfiles>=1.1.0",
    "pre-commit>=4.3.0",
    "djlint>=1.36.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "opennutrilab.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.djlint]
indent=2
